--- a/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/barras-menu.xhtml
@@ -6,18 +6,14 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <div class="left-content-box uk-margin-top">
-        <h5>Estatus</h5>
+        <h5 class="uk-text-uppercase">#{etiqueta['status']}</h5>
         <div>
-            <span class="uk-text-small">Escuelas <small>(50)</small></span>
-            <progress class="uk-progress" value="50" max="100"/>
+            <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['menu.schools']} <small>(#{estatusControlador.escuelas})</small></span>
+            <progress class="uk-progress" value="100" max="100"/>
         </div>
         <div>
-            <span class="uk-text-small">Licencias <small>(78)</small></span>
-            <progress class="uk-progress success" value="78" max="100"/>
-        </div>
-        <div>
-            <span class="uk-text-small">Escuelas por caducar <small>(12)</small></span>
-            <progress class="uk-progress warning" value="12" max="100"/>
+            <span class="uk-text-small primera-mayuscula uk-display-block">#{administracion['schooldetail.licenses']} <small>(#{estatusControlador.licencias})</small></span>
+            <progress class="uk-progress success" value="100" max="100"/>
         </div>
     </div>
 </html>
