--- a/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
@@ -14,10 +14,16 @@
                         <h:graphicImage library="img" name="esquadron.svg"/>
                         <span class="titulo-blanco uk-text-capitalize">squadron</span>
                     </div>
-                    <!--
                     <ul class="uk-navbar-nav uk-visible@m">
-                        <li><a href="#">Accounts</a></li>
                         <li>
+                            <a href="#">
+                                <h:outputText id="escuela-seleccion"
+                                              value="#{empty escuelaPoblacionControlador.claveCentroTrabajo ?
+                                              escuelaPoblacionControlador.nombreEscuela :
+                                              escuelaPoblacionControlador.nombreEscuela.concat(' : ').concat(escuelaPoblacionControlador.claveCentroTrabajo) }"/>
+                            </a>
+                        </li>
+                        <!-- <li>
                             <a href="#">Settings <span data-uk-icon="icon: triangle-down"></span></a>
                             <div class="uk-navbar-dropdown">
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
@@ -31,9 +37,8 @@
                                     <li><a href="#"><span data-uk-icon="icon: sign-out"></span> Logout</a></li>
                                 </ul>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
-                    -->
                 </div>
                 <!--
                 <div class="uk-navbar-right">
